# RankIt

./: CMakeLists.txt  README.md
src/: Card.hpp  Rank.hpp  example.cpp
